README: СЃРѕСЃС‚Р°РІ, РїСЂРѕС€РёРІРєРё, SD-РєР°СЂС‚Р°, РїСЂРѕС‚РѕРєРѕР» СЃРІСЏР·Рё; РїРµСЂРµРёРјРµРЅРѕРІР°РЅРёРµ LorettStratoLink -> LorettLink
Made-with: Cursor

--- a/LorettLink_rx/platformio.ini
+++ b/LorettLink_rx/platformio.ini
@@ -1,6 +1,6 @@
-[env:genericSTM32F446RE]
+[env:genericSTM32F412RG]
 platform = ststm32
-board = genericSTM32F446RE
+board = genericSTM32F412RG
 framework = stm32cube
 
 upload_protocol = stlink
@@ -9,10 +9,8 @@ debug_tool = stlink
 build_flags =
     -Iinclude
     -DUSE_HAL_DRIVER
-    -DSTM32F446xx
+    -DSTM32F412xx
     -Wall
     -Wextra
     -Wno-unused-parameter
     -Os
-
-extra_scripts = pre:extra_script.py
